--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,11 +66,8 @@ h1 a.glyphicon {
   }
 }
 
-.feature-review-form {
-  .feature-review-accept,
-  .feature-review-reject {
-    margin-bottom: 12px;
-  }
+.accept-reject-buttons {
+  margin-bottom: 10px;
 }
 
 .icon-success {
