--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -29,23 +29,7 @@
             = text_field_tag('jira_key', '', placeholder: 'e.g: ENG-123', class: 'form-control input-sm', required: true)
           = submit_tag('Link', class: 'btn btn-primary btn-sm')
 .row
-  .col-lg-6
-    - panel(heading: 'Summary', status: @feature_review_with_statuses.summary_status, klass: 'summary') do
-      %ul.list-group
-        %li.list-group-item
-          %strong
-            - icon(item_status_icon_class(@feature_review_with_statuses.build_status))
-            %span.title Test Results
-        %li.list-group-item
-          %strong
-            - icon(item_status_icon_class(@feature_review_with_statuses.qa_status))
-            %span.title QA Acceptance
-        %li.list-group-item
-          %strong
-            - icon(item_status_icon_class(@feature_review_with_statuses.release_exception_status))
-            %span.title Repo Owner Commentary
-
-  .col-lg-6
+  .col-lg-6.col-lg-push-6
     - panel(heading: 'Apps Under Review', klass: 'app-info', button_link: { text: 'Modify', url: edit_url(@feature_review_with_statuses.app_versions) }) do
       - table(headers: %w(App Commit Author Time)) do
         - @feature_review_with_statuses.apps_with_latest_commit.each do |app_name, latest_commit|
@@ -55,7 +39,6 @@
             %td= latest_commit.author_name || 'unknown'
             %td= latest_commit.time || 'unknown'
 
-  .col-lg-6
     - panel(heading: 'Test Results', klass: 'builds', status: @feature_review_with_statuses.build_status) do
       - if @feature_review_with_statuses.builds.empty?
         .panel-body No builds found
@@ -68,35 +51,6 @@
               %td= app_name
               %td= build.source
 
-.row
-  .col-lg-6
-    - panel(heading: 'QA Acceptance', klass: 'qa-submission', status: @feature_review_with_statuses.qa_status) do
-      .panel-body
-        - if @feature_review_with_statuses.qa_submission
-          %p
-            %span.qa-email
-              %strong= @feature_review_with_statuses.qa_submission.email
-            at
-            %span.qa-time= @feature_review_with_statuses.qa_submission.created_at
-          = simple_format(@feature_review_with_statuses.qa_submission.comment, class: 'qa-comment')
-        - else
-          Not reviewed by QA
-      .panel-footer
-        = form_tag(events_path(type: 'manual_test', return_to: @return_to), method: 'post') do
-          - @feature_review_with_statuses.app_versions.each do |app_name, version|
-            = hidden_field_tag('apps[][name]', app_name)
-            = hidden_field_tag('apps[][version]', version)
-          %label.radio-inline.feature-review-accept
-            = radio_button_tag 'status', 'success', false, required: true
-            Accept
-          %label.radio-inline.feature-review-reject
-            = radio_button_tag 'status', 'failed', false, required: true
-            Reject
-          .form-group
-            = label_tag('comment', 'Comment', class: 'control-label sr-only', id: 'qa-comment')
-            = text_area_tag('comment', '', placeholder: 'Comment', class: 'form-control', required: true, rows: 4)
-          = submit_tag('Submit', class: 'btn btn-primary', id: '#qa-submit')
-  .col-lg-6
     - panel(heading: 'Repo Owner Commentary', klass: 'release-exception', status: @feature_review_with_statuses.release_exception_status) do
       .panel-body
         - if @feature_review_with_statuses.release_exception
@@ -114,13 +68,59 @@
             - @feature_review_with_statuses.app_versions.each do |app_name, version|
               = hidden_field_tag('apps[][name]', app_name)
               = hidden_field_tag('apps[][version]', version)
-            %label.radio-inline.feature-review-accept
-              = radio_button_tag 'status', 'approved', false, required: true
-              Approve
-            %label.radio-inline.feature-review-reject
-              = radio_button_tag 'status', 'declined', false, required: true
-              Decline
+            %div.accept-reject-buttons
+              %label.radio-inline.feature-review-accept
+                = radio_button_tag 'status', 'approved', false, required: true
+                Approve
+              %label.radio-inline.feature-review-reject
+                = radio_button_tag 'status', 'declined', false, required: true
+                Decline
             .form-group
               = label_tag('comment', 'Comment', class: 'control-label sr-only')
               = text_area_tag('comment', '', placeholder: 'Comment', class: 'form-control', required: true, rows: 4)
             = submit_tag('Submit', class: 'btn btn-primary')
+
+  .col-lg-6.col-lg-pull-6
+    - panel(heading: 'Summary', status: @feature_review_with_statuses.summary_status, klass: 'summary') do
+      %ul.list-group
+        %li.list-group-item
+          %strong
+            - icon(item_status_icon_class(@feature_review_with_statuses.build_status))
+            %span.title Test Results
+        %li.list-group-item
+          %strong
+            - icon(item_status_icon_class(@feature_review_with_statuses.qa_status))
+            %span.title QA Acceptance
+        %li.list-group-item
+          %strong
+            - icon(item_status_icon_class(@feature_review_with_statuses.release_exception_status))
+            %span.title Repo Owner Commentary
+
+    - panel(heading: 'QA Acceptance', klass: 'qa-submission', status: @feature_review_with_statuses.qa_status) do
+      .panel-body
+        - if @feature_review_with_statuses.qa_submission
+          %p
+            %span.qa-email
+              %strong= @feature_review_with_statuses.qa_submission.email
+            at
+            %span.qa-time= @feature_review_with_statuses.qa_submission.created_at
+          = simple_format(@feature_review_with_statuses.qa_submission.comment, class: 'qa-comment')
+        - else
+          Not reviewed by QA
+      .panel-footer
+        = form_tag(events_path(type: 'manual_test', return_to: @return_to), method: 'post') do
+          - @feature_review_with_statuses.app_versions.each do |app_name, version|
+            = hidden_field_tag('apps[][name]', app_name)
+            = hidden_field_tag('apps[][version]', version)
+          %div.accept-reject-buttons
+            %label.radio-inline.feature-review-accept
+              = radio_button_tag 'status', 'success', false, required: true
+              Accept
+            %label.radio-inline.feature-review-reject
+              = radio_button_tag 'status', 'failed', false, required: true
+              Reject
+          .form-group
+            = label_tag('comment', 'Comment', class: 'control-label sr-only', id: 'qa-comment')
+            = text_area_tag('comment', '', placeholder: 'Comment', class: 'form-control', required: true, rows: 4)
+          = submit_tag('Submit', class: 'btn btn-primary', id: '#qa-submit')
+
