--- a/app/views/partials/_add_repo_success_msg.html.haml
+++ b/app/views/partials/_add_repo_success_msg.html.haml
@@ -1,3 +1,3 @@
-= "Repository #{repo_name} successfuly added."
+= "Repository #{repo_name} successfully added."
 - unless params[:token_types].blank?
   = "<br/>Created tokens can be viewed on the #{link_to('Tokens', tokens_path)} page.".html_safe
